--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
    </section>
 
    <section class="experience-area">
-       <h2>Experiences</h2>
+       <h2 class="experience-area-heading">Experiences</h2>
        <div id="full-stack" class="half-width single-experience">
             <h2>Full Stack Web Developer</h2>
             <h3 class="orange-highlight">2021-Present | Pro Level Developer</h3>
